# ollama-benchmark

./: .gitignore  LICENSE  README.md  benchmark1.yml  pyproject.toml  query_llm.py  requirements.txt  setup.py
.github/workflows/: python-publish.yml
data/: benchmark1.yml  benchmark_models.yml  benchmark_models_16gb_ram.yml  benchmark_models_4gb_ram.yml  benchmark_models_8gb_ram.yml
llm_benchmark/: check_models.py  check_ollama.py  main.py  run_benchmark.py  run_benchmark_one.py
llm_benchmark/data/: benchmark1.yml  benchmark2.yml  benchmark_models_16gb_ram.yml  benchmark_models_2gb_ram.yml  benchmark_models_32gb_ram.yml  benchmark_models_3gb_ram.yml  benchmark_models_4gb_ram.yml  benchmark_models_8gb_ram.yml
llm_benchmark/security_connection/: connection.py
llm_benchmark/systeminfo/: sysmain.py
ollama-benchmark/: query_llm.py  run_benchmark.py  run_benchmark_one.py
security_connection/: connection.py
systeminfo/: main.py  requirements.txt  sysmain.py
systeminfo/samples/: apple-macos.txt  raspberrypi5.txt  ubuntu-native.txt  ubuntu-wsl2.txt  win11.txt
test/: test_llm.py
tests/: test_pytest.py
